hw02_docker/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-health-checker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8s-health-checker
  template:
    metadata:
      labels:
        app: k8s-health-checker
    spec:
      containers:
        - name: k8s-health-checker
          image: jiubadze/health-checker
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
